--- a/CSS/partials/style.css
+++ b/CSS/partials/style.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  overflow: hidden;
   height: 100vh;
 }
 @media screen and (max-width: 960px) {
@@ -13,6 +14,7 @@
     height: auto;
     width: 100%;
     transform: translate3d(0, 0, 0);
+    overflow: none;
   }
 }
 
@@ -36,8 +38,8 @@
 }
 
 .spiderman {
-  width: 150%;
-  transform: translate3d(-170px, 0, 0);
+  width: 136%;
+  transform: translate3d(-190px, 0, 0);
 }
 @media screen and (max-width: 960px) {
   .spiderman {
@@ -45,6 +47,7 @@
     height: auto;
     width: 100%;
     transform: translate3d(0, 0, 0);
+    overflow: none;
   }
 }
 
